# simpleDB

./: .gitignore  README.md  WORKSPACE
.github/workflows/: bazel.yml
lib/: BUILD.bazel  greet.cc  greet.h
src/: BUILD.bazel  main.cc
src/includes/: BUILD.bazel  add.h
src/includes/type/: BUILD.bazel  boolean_type.h  integer_type.h  string_type.h  timestamp_type.h  type.h  type_id.h
src/type/: BUILD.bazel  boolean_type.cc  integer_type.cc  string_type.cc  timestamp_type.cc  type.cc
test/: BUILD.bazel  test_greet.cc
