load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "boolean",
    srcs = [
        "boolean_type.cc",
    ],
    copts = [
        "-std=c++17",
    ],
    deps = [
        "//src/includes/type:boolean",
    ],
)

cc_library(
    name = "integer",
    srcs = [
        "integer_type.cc",
    ],
    copts = [
        "-std=c++17",
    ],
    deps = [
        "//src/includes/type:integer",
    ],
)

cc_library(
    name = "string",
    srcs = [
        "string_type.cc",
    ],
    copts = [
        "-std=c++17",
    ],
    deps = [
        "//src/includes/type:string",
    ],
)

cc_library(
    name = "timestamp",
    srcs = [
        "timestamp_type.cc",
    ],
    copts = [
        "-std=c++17",
    ],
    deps = [
        "//src/includes/type:timestamp",
    ],
)
